--- a/css/styles.css
+++ b/css/styles.css
@@ -181,10 +181,15 @@ body.light .logo-light {
     position: relative;
     width: 90%;
     margin: 40px auto;
+    background-color: #332E2E;
+    padding: 20px;
+    border-radius: 14px;
 }
 
 .hero-img {
-    width: 100%;
+    width: 90%;
+    display: block;
+    margin: 0 auto;
 }
 
 .hero-content {
